@@ -7,3 +7,4 @@ require 'marc/reader'
 require 'marc/writer'
 require 'marc/exception'
 require 'marc/xmlwriter'
+require 'marc/xmlreader'
