@@ -11,3 +11,4 @@ require 'test/tc_record'
 require 'test/tc_reader'
 require 'test/tc_writer'
 require 'test/tc_xmlwriter'
+require 'test/tc_xmlreader'
