@@ -5,6 +5,7 @@ v0.0.7
   out into MARC::Constants which is required as necessary.
 - moved encode from MARC::MARXML into MARC::XMLWriter and added constants
   to MARC::Constants
+- added MARC::XMLReader for reading MARX as XML
 
 v0.0.6  Tue Oct 18 09:33:12 CDT 2005
 - MARC::MARC21::decode throws an exception when a directory can't be found.
